[gd_scene load_steps=11 format=3 uid="uid://bejv0qpiwvso"]

[ext_resource type="Material" uid="uid://bsbdxee7lf52g" path="res://materials/floor_material.tres" id="1_40u70"]
[ext_resource type="Script" path="res://scenes/crawler/rooms/room_01.gd" id="1_udw4s"]
[ext_resource type="Material" uid="uid://cx4301xkuyplj" path="res://materials/wall_material.tres" id="2_aqlpr"]
[ext_resource type="Script" path="res://scripts/crawler/npcs/spawner.gd" id="4_j0slf"]
[ext_resource type="Script" path="res://characters/dendritic_cell.gd" id="5_70yhi"]
[ext_resource type="PackedScene" uid="uid://cjjueyjd1akmm" path="res://characters/Cell.tscn" id="6_apt26"]
[ext_resource type="PackedScene" uid="uid://c5h2mlix2fy2j" path="res://scenes/RainParticles.tscn" id="7_0gn7k"]

[sub_resource type="NavigationMesh" id="NavigationMesh_nl6f1"]
vertices = PackedVector3Array(1.018, 0.5, -4.9, 1.798, 0.5, -5.55, 1.798, 0.5, -7.11, -8.342, 0.5, -7.11, -6.132, 0.5, -1.78, -5.612, 0.5, -1.78, -8.342, 0.5, -0.87, -6.782, 0.5, -0.87, -1.842, 0.5, 2.64, -0.152, 0.5, 1.99, 2.188, 0.5, -5.55, 2.838, 0.5, -5.03, 8.428, 0.5, -7.11, 2.318, 0.5, -2.04, 8.428, 0.5, -1.91, 8.428, 0.5, 0.95, 1.798, 0.5, 0.82, -6.652, 0.5, -0.35, -8.342, 0.5, 6.41, -2.492, 0.5, 6.41, -2.492, 0.5, 4.33, 4.268, 0.5, 7.84, 6.738, 0.5, 7.84, 6.478, 0.5, 7.58, 4.398, 0.5, 6.8, 6.868, 0.5, 6.41, 8.428, 0.5, 6.41, 6.478, 0.5, 6.8, 4.008, 0.5, 6.41, 1.538, 0.5, 2.25, 1.148, 0.5, 2.64, 0.497999, 0.5, 6.41, 0.497999, 0.5, 2.64, -1.452, 0.5, 3.03, -1.452, 0.5, 3.68)
polygons = [PackedInt32Array(1, 0, 2), PackedInt32Array(2, 0, 5), PackedInt32Array(2, 5, 4), PackedInt32Array(2, 4, 3), PackedInt32Array(7, 6, 4), PackedInt32Array(4, 6, 3), PackedInt32Array(8, 5, 9), PackedInt32Array(9, 5, 0), PackedInt32Array(10, 1, 2), PackedInt32Array(10, 2, 11), PackedInt32Array(11, 2, 12), PackedInt32Array(13, 11, 14), PackedInt32Array(14, 11, 12), PackedInt32Array(14, 15, 13), PackedInt32Array(13, 15, 16), PackedInt32Array(6, 7, 17), PackedInt32Array(19, 18, 20), PackedInt32Array(20, 18, 17), PackedInt32Array(17, 18, 6), PackedInt32Array(22, 21, 23), PackedInt32Array(23, 21, 24), PackedInt32Array(15, 26, 25), PackedInt32Array(23, 24, 27), PackedInt32Array(27, 24, 28), PackedInt32Array(30, 29, 31), PackedInt32Array(31, 29, 28), PackedInt32Array(27, 28, 25), PackedInt32Array(25, 28, 29), PackedInt32Array(25, 29, 16), PackedInt32Array(25, 16, 15), PackedInt32Array(31, 32, 30), PackedInt32Array(33, 8, 9), PackedInt32Array(33, 9, 34), PackedInt32Array(34, 9, 32), PackedInt32Array(20, 34, 19), PackedInt32Array(19, 34, 31), PackedInt32Array(31, 34, 32)]
cell_size = 0.13

[sub_resource type="BoxShape3D" id="BoxShape3D_4bt5b"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_b8fv4"]

[node name="room01" type="Node3D"]
script = ExtResource("1_udw4s")

[node name="NavigationRegion3D" type="NavigationRegion3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -7.47)
navigation_mesh = SubResource("NavigationMesh_nl6f1")

[node name="walls" type="CSGCombiner3D" parent="NavigationRegion3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.01, -0.2)
material_override = ExtResource("2_aqlpr")
use_collision = true

[node name="wall_0" type="CSGBox3D" parent="NavigationRegion3D/walls"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -19.97, 1.49, 0.0549998)
material_override = ExtResource("2_aqlpr")
use_collision = true
size = Vector3(22.08, 3, 15.23)

[node name="wall_3" type="CSGBox3D" parent="NavigationRegion3D/walls"]
transform = Transform3D(0.766044, 0, 0.642788, 0, 1, 0, -0.642788, 0, 0.766044, -4.12944, 1.45, 1.44296)
material_override = ExtResource("2_aqlpr")
use_collision = true
size = Vector3(0.5, 3, 5.96)

[node name="wall_7" type="CSGBox3D" parent="NavigationRegion3D/walls"]
transform = Transform3D(0.984808, 0, -0.173648, 0, 1, 0, 0.173648, 0, 0.984808, 1.34024, 1.45, -1.24454)
material_override = ExtResource("2_aqlpr")
use_collision = true
size = Vector3(0.5, 3, 7.05)

[node name="wall_1" type="CSGBox3D" parent="NavigationRegion3D/walls"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 17.495, 1.45, 0.12)
material_override = ExtResource("2_aqlpr")
use_collision = true
size = Vector3(16.95, 3, 15.12)

[node name="wall_5" type="CSGBox3D" parent="NavigationRegion3D/walls"]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 8.325, 1.45, 7.39)
material_override = ExtResource("2_aqlpr")
use_collision = true
size = Vector3(2.42, 3, 0.5)

[node name="door" type="CSGBox3D" parent="NavigationRegion3D/walls"]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 5.42, 1.45, 8.015)
visible = false
material_override = ExtResource("2_aqlpr")
use_collision = true
size = Vector3(3.41, 3, 0.71)

[node name="wall_6" type="CSGBox3D" parent="NavigationRegion3D/walls"]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, -2.835, 1.45, 7.39)
material_override = ExtResource("2_aqlpr")
use_collision = true
size = Vector3(13.28, 3, 0.5)

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="NavigationRegion3D/walls"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.7327, 1.54596, 7.57877)
height = 3.14

[node name="CSGCylinder3D2" type="CSGCylinder3D" parent="NavigationRegion3D/walls"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7.0827, 1.54596, 7.57877)
height = 3.14

[node name="floor" type="CSGCombiner3D" parent="NavigationRegion3D"]
material_override = ExtResource("1_40u70")
use_collision = true

[node name="floor" type="CSGBox3D" parent="NavigationRegion3D/floor"]
transform = Transform3D(0.8, 0, 0, 0, 1, 0, 0, 0, 0.7, 0, -0.5, -0.0699997)
material_override = ExtResource("1_40u70")
use_collision = true
size = Vector3(23.78, 1, 21.48)

[node name="floor3" type="CSGBox3D" parent="NavigationRegion3D/floor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.54, -0.5, 7.905)
material_override = ExtResource("1_40u70")
use_collision = true
size = Vector3(3.4, 1, 1)

[node name="EnterArea" type="Area3D" parent="."]
transform = Transform3D(2.6, 0, 0, 0, 1, 0, 0, 0, 0.6, 5.39, 1.43, -1.54)

[node name="CollisionShape3D" type="CollisionShape3D" parent="EnterArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 4.76837e-06)
shape = SubResource("BoxShape3D_4bt5b")

[node name="Spawner" type="Node3D" parent="." node_paths=PackedStringArray("room")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.47, 0.8, -6.05)
script = ExtResource("4_j0slf")
room = NodePath("..")

[node name="Timer" type="Timer" parent="Spawner"]

[node name="Spawner2" type="Node3D" parent="." node_paths=PackedStringArray("room")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.33, 0.8, -9.75)
script = ExtResource("4_j0slf")
room = NodePath("..")

[node name="Timer" type="Timer" parent="Spawner2"]

[node name="Spawner3" type="Node3D" parent="." node_paths=PackedStringArray("room")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.06, 0.8, -11.95)
script = ExtResource("4_j0slf")
room = NodePath("..")

[node name="Timer" type="Timer" parent="Spawner3"]

[node name="NPCs" type="Node3D" parent="."]

[node name="DendriticCell" type="Node3D" parent="NPCs"]
transform = Transform3D(-0.642788, 0, 0.766044, 0, 1, 0, -0.766044, 0, -0.642788, 7.49, -0.0299998, -13.08)
script = ExtResource("5_70yhi")

[node name="Visuals" type="Node3D" parent="NPCs/DendriticCell"]

[node name="Cell" parent="NPCs/DendriticCell/Visuals" instance=ExtResource("6_apt26")]
transform = Transform3D(-0.81, 0, -7.08124e-08, 0, 0.81, 0, 7.08124e-08, 0, -0.81, 0, 0, 0)
type = 3

[node name="InteractionArea" type="Area3D" parent="NPCs/DendriticCell"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="NPCs/DendriticCell/InteractionArea"]
transform = Transform3D(2.87121, 0, 5.96046e-08, 0, 2.87121, 0, -5.96046e-08, 0, 2.87121, 0, 0.922464, 0)
shape = SubResource("CylinderShape3D_b8fv4")

[node name="RainParticles" parent="." instance=ExtResource("7_0gn7k")]

[connection signal="area_entered" from="EnterArea" to="." method="_on_enter_area_area_entered"]
[connection signal="timeout" from="Spawner/Timer" to="Spawner" method="_on_timer_timeout"]
[connection signal="timeout" from="Spawner2/Timer" to="Spawner2" method="_on_timer_timeout"]
[connection signal="timeout" from="Spawner3/Timer" to="Spawner3" method="_on_timer_timeout"]
[connection signal="body_entered" from="NPCs/DendriticCell/InteractionArea" to="NPCs/DendriticCell" method="_on_interaction_area_body_entered"]
[connection signal="body_exited" from="NPCs/DendriticCell/InteractionArea" to="NPCs/DendriticCell" method="_on_interaction_area_body_exited"]
